--- a/docs/_tutorials/built-in.ipynb
+++ b/docs/_tutorials/built-in.ipynb
@@ -3051,6 +3051,8 @@
     "- `load_nucleotides()`\n",
     "- or `load_all_compounds()` (to perform all of the above)\n",
     "\n",
+    "All of the above also have an `unload_` equivalent to again remove the compounds from the currently loaded default compounds.\n",
+    "\n",
     "Of course, we can set a custom default library to load automatically using the `set_default_compounds` function (see below)."
    ]
   },
@@ -5870,7 +5872,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, aparently, aspirin is not available from the loaded sugar compounds (no surprise there), but it is actually also not going to be part of any of the other pre-defined sets. So, we need to refer to pubchem to get it..."
+    "So, apparently, aspirin is not available from the loaded sugar compounds (no surprise there), but it is actually also not going to be part of any of the other pre-defined sets. So, we need to refer to pubchem to get it..."
    ]
   },
   {
@@ -6569,7 +6571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And there it is!"
+    "And there it is! Again, using the `molecule` function would be all we need. The call to PubChem is automatically handled by biobuild if a reference to PDBECompounds does not yield any results."
    ]
   }
  ],
