integrate openmm + molfile

--- a/docs/_tutorials/converting_formats.ipynb
+++ b/docs/_tutorials/converting_formats.ipynb
@@ -27,18 +27,23 @@
     "  node_1(\"Molecule\")\n",
     "  node_2([\"PDB\"])\n",
     "  node_3([\"mmCIF\"])\n",
+    "  node_9([\"Molfile\"])\n",
     "  node_4([\"JSON\\n(biobuild)\"])\n",
     "  node_5([\"pickle\\n(biobuild)\"])\n",
     "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
     "  node_8{{\"biopython\\n(PDB.Structure)\"}}\n",
+    "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
     "  node_2 <--> node_1\n",
     "  node_3 <--> node_1\n",
+    "  node_9 <--> node_1\n",
     "  node_4 <--> node_1\n",
     "  node_5 <--> node_1\n",
     "  node_6 <--> node_1\n",
     "  node_7 <--> node_1\n",
     "  node_8 <--> node_1\n",
+    "  node_10 <--> node_1\n",
+    "  \n",
     "```\n",
     "\n",
     "Here are is a table with the corresponding methods available in the `Molecule` class:\n",
@@ -47,10 +52,12 @@
     "| --------- | ------------- | -------------- |\n",
     "| PDB       | `from_pdb`    | `to_pdb`       |\n",
     "| mmCIF     | `from_cif`    | `to_cif`       |\n",
+    "| Molfile   | `from_molfile` | `to_molfile`  |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
+    "| openmm    | `from_openmm` | `to_openmm`    | \n",
     "| biopython | `<normal init>` | `to_biopython` |"
    ]
   },
