--- a/docs/_tutorials/built-in.ipynb
+++ b/docs/_tutorials/built-in.ipynb
@@ -1501,7 +1501,7 @@
     }
    ],
    "source": [
-    "man = bb.molecule(\"files/MAN.pdb\")\n",
+    "man = bb.molecule(\"files/man.pdb\")\n",
     "\n",
     "# use pre-defined 12aa linkage\n",
     "man2 = bb.connect(man, man, \"12aa\")\n",
