--- a/docs/_tutorials/getting_started.ipynb
+++ b/docs/_tutorials/getting_started.ipynb
@@ -6620,7 +6620,7 @@
    "source": [
     "### Formats and Integrations\n",
     "\n",
-    "Now that we have a structure we like we can save it as a _PDB_ or _mmCIF_ file. If we have more intricate interests in the molecules we have built we can export them directly to `rdkit` or `openbabel` objects for further analysis. "
+    "Now that we have a structure we like we can for instance save it as a _PDB_ or _mmCIF_ file. If we have more intricate interests in the molecules we have built we can export them directly to `rdkit` or `openbabel` objects for further analysis. "
    ]
   },
   {
@@ -6636,6 +6636,7 @@
     "  node_2([\"PDB\"])\n",
     "  node_3([\"mmCIF\"])\n",
     "  node_9([\"Molfile\"])\n",
+    "  node_11((\"SMILES\"))\n",
     "  node_4([\"JSON\\n(biobuild)\"])\n",
     "  node_5([\"pickle\\n(biobuild)\"])\n",
     "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
@@ -6644,7 +6645,8 @@
     "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
     "  node_2 <--> node_1\n",
     "  node_3 <--> node_1\n",
-    "  node_9 <--> node_1\n",
+    "  node_9 <-.-> node_1\n",
+    "  node_11 <-.-> node_1\n",
     "  node_4 <--> node_1\n",
     "  node_5 <--> node_1\n",
     "  node_6 <--> node_1\n",
@@ -6661,6 +6663,7 @@
     "| PDB       | `from_pdb`    | `to_pdb`       |\n",
     "| mmCIF     | `from_cif`    | `to_cif`       |\n",
     "| Molfile   | `from_molfile` | `to_molfile`  |\n",
+    "| SMILES    | `from_smiles`  | `to_smiles`   |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
