--- a/docs/_tutorials/converting_formats.ipynb
+++ b/docs/_tutorials/converting_formats.ipynb
@@ -28,6 +28,7 @@
     "  node_2([\"PDB\"])\n",
     "  node_3([\"mmCIF\"])\n",
     "  node_9([\"Molfile\"])\n",
+    "  node_11((\"SMILES\"))\n",
     "  node_4([\"JSON\\n(biobuild)\"])\n",
     "  node_5([\"pickle\\n(biobuild)\"])\n",
     "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
@@ -36,7 +37,8 @@
     "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
     "  node_2 <--> node_1\n",
     "  node_3 <--> node_1\n",
-    "  node_9 <--> node_1\n",
+    "  node_9 <-.-> node_1\n",
+    "  node_11 <-.-> node_1\n",
     "  node_4 <--> node_1\n",
     "  node_5 <--> node_1\n",
     "  node_6 <--> node_1\n",
@@ -53,6 +55,7 @@
     "| PDB       | `from_pdb`    | `to_pdb`       |\n",
     "| mmCIF     | `from_cif`    | `to_cif`       |\n",
     "| Molfile   | `from_molfile` | `to_molfile`  |\n",
+    "| SMILES    | `from_smiles`  | `to_smiles`   |\n",
     "| JSON      | `from_json`   | `to_json`      |\n",
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
