--- a/docs/examples/building_circular.ipynb
+++ b/docs/examples/building_circular.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Circular Molecules\n",
+    "\n",
     "> ### In this tutorial we will cover:\n",
     "> - how we can build circular structures in biobuild"
    ]
@@ -7689,29 +7691,6 @@
    "metadata": {},
    "source": [
     "And there it is, a nice circle of histidines. We can also use nglview to get a more detailed view."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "NGLView is not available. Please install it with `pip install nglview` and be sure to use a compatible environment.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m optimized_his\u001b[39m.\u001b[39mnglview()\n",
-      "File \u001b[0;32m~/anaconda3/envs/glyco2/lib/python3.11/site-packages/biobuild/core/entity.py:563\u001b[0m, in \u001b[0;36mBaseEntity.nglview\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    559\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mnglview\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m    560\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    561\u001b[0m \u001b[39m    View the molecule in 3D through nglview\u001b[39;00m\n\u001b[1;32m    562\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 563\u001b[0m     \u001b[39mreturn\u001b[39;00m utils\u001b[39m.\u001b[39mvisual\u001b[39m.\u001b[39mNglViewer(\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39mshow()\n",
-      "File \u001b[0;32m~/anaconda3/envs/glyco2/lib/python3.11/site-packages/biobuild/utils/visual.py:47\u001b[0m, in \u001b[0;36mNglViewer.__init__\u001b[0;34m(self, molecule)\u001b[0m\n\u001b[1;32m     45\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m, molecule):\n\u001b[1;32m     46\u001b[0m     \u001b[39mif\u001b[39;00m nglview \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 47\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mImportError\u001b[39;00m(\n\u001b[1;32m     48\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mNGLView is not available. Please install it with `pip install nglview` and be sure to use a compatible environment.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     49\u001b[0m         )\n\u001b[1;32m     50\u001b[0m     \u001b[39mif\u001b[39;00m molecule\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m \u001b[39min\u001b[39;00m (\u001b[39m\"\u001b[39m\u001b[39mMolecule\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mAtomGraph\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mResidueGraph\u001b[39m\u001b[39m\"\u001b[39m):\n\u001b[1;32m     51\u001b[0m         \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstructure \u001b[39m=\u001b[39m molecule\u001b[39m.\u001b[39mstructure\u001b[39m.\u001b[39mto_biopython()\n",
-      "\u001b[0;31mImportError\u001b[0m: NGLView is not available. Please install it with `pip install nglview` and be sure to use a compatible environment."
-     ]
-    }
-   ],
-   "source": [
-    "optimized_his.nglview()"
    ]
   },
   {
