[automatic] Version update to 3.9.62

--- a/examples/converting_formats.ipynb
+++ b/examples/converting_formats.ipynb
@@ -84,6 +84,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly\n",
+    "plotly.offline.init_notebook_mode()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -158,9 +168,7 @@
     "glu = bb.Molecule.from_compound(\"GLU\")\n",
     "\n",
     "# connect the amino acids using the peptide linkage (called \"LINK\")\n",
-    "peptide = bb.connect(his, glu, \"LINK\")\n",
-    "peptide = bb.connect(peptide, his, \"LINK\")\n",
-    "\n",
+    "peptide = his % \"LINK\" + glu + his\n",
     "\n",
     "# convert to an RDKit molecule\n",
     "peptide = peptide.to_rdkit()\n",
