--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -5,6 +5,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Getting Started\n",
+    "\n",
     "Welcome to the first `biobuild` tutorial, where we shall learn the basics of operating with `biobuild`!\n",
     "\n",
     "> ### In this tutorial we will cover:\n",
@@ -6730,13 +6732,9 @@
     "# we use the DistanceRotatron environment\n",
     "env = optimizers.DistanceRotatron(graph, rotatable_edges)\n",
     "\n",
-    "# step (4)\n",
+    "# step (4) and (5)\n",
     "# run the optimization algorithm\n",
-    "solution, final_eval = optimizers.genetic_optimize(env)\n",
-    "\n",
-    "# step (5)\n",
-    "# apply the solution to the molecule\n",
-    "new_optimized = optimizers.apply_solution(solution, env, new)\n",
+    "new_optimized = optimizers.optimize(new, env, algorithm=\"genetic\")\n",
     "\n",
     "# and check what it looks like\n",
     "new.show()"
