update docs for buildamol
update docs for buildamol

--- a/docs/examples/building_circular.ipynb
+++ b/docs/examples/building_circular.ipynb
@@ -7,14 +7,14 @@
     "# Circular Molecules\n",
     "\n",
     "> ### In this tutorial we will cover:\n",
-    "> - how we can build circular structures in biobuild"
+    "> - how we can build circular structures in BuildAMol"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sometimes, the molecules we want to build are circular. This poses a challenge to biobuild which is tailored to linear molecules. In fact, biobuild's rotational optimization algorithms for improving conformations are useless for circular structures. Hence, in pure biobuild we cannot build circular molecules at this point!"
+    "Sometimes, the molecules we want to build are circular. This poses a challenge to BuildAMol which is tailored to linear molecules. In fact, BuildAMol's rotational optimization algorithms for improving conformations are useless for circular structures. Hence, in pure BuildAMol we cannot build circular molecules at this point!"
    ]
   },
   {
@@ -28,9 +28,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "However, didn't the tutorial title suggest that we _could_ build circular structures? Well, yes, we can - it's just not something that biobuild _inherently_ can do. But this is where biobuild's excellent integratability with other libraries comes in handy. \n",
+    "However, didn't the tutorial title suggest that we _could_ build circular structures? Well, yes, we can - it's just not something that BuildAMol _inherently_ can do. But this is where BuildAMol's excellent integratability with other libraries comes in handy. \n",
     "\n",
-    "The cheminformatics library `RDKit` uses a molecular force-field optimization that is perfectly able to handle ring-like structures. So, in order to build circular structures in biobuild, we (1) create the structure we want linearly, (2) \"circularize\" it by adding the necessary bonds, and (3) export it to RDKit to perform the conformational optimization. If after cricularization our building process is not yet complete, we can always (4) import the molecule back into biobuild to continue our work."
+    "The cheminformatics library `RDKit` uses a molecular force-field optimization that is perfectly able to handle ring-like structures. So, in order to build circular structures in BuildAMol, we (1) create the structure we want linearly, (2) \"circularize\" it by adding the necessary bonds, and (3) export it to RDKit to perform the conformational optimization. If after cricularization our building process is not yet complete, we can always (4) import the molecule back into BuildAMol to continue our work."
    ]
   },
   {
@@ -5145,7 +5145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is where our biobuild use comes to a temporary end, and we make use of RDKit to handle the circularization part more properly."
+    "This is where our BuildAMol use comes to a temporary end, and we make use of RDKit to handle the circularization part more properly."
    ]
   },
   {
@@ -7679,7 +7679,7 @@
     "AllChem.EmbedMolecule(rdkit_mol)\n",
     "AllChem.UFFOptimizeMolecule(rdkit_mol)\n",
     "\n",
-    "# import the molecule back into biobuild\n",
+    "# import the molecule back into BuildAMol\n",
     "optimized_his = bam.molecule(rdkit_mol)\n",
     "\n",
     "# show the molecule\n",
@@ -7697,7 +7697,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, that's it for this tutorial. Building circular structures is not so difficult after all, but it does involve making use of biobuild's integratability features. Thank you for checking out this tutorial and good luck with your research!"
+    "So, that's it for this tutorial. Building circular structures is not so difficult after all, but it does involve making use of BuildAMol's integratability features. Thank you for checking out this tutorial and good luck with your research!"
    ]
   }
  ],
