--- a/examples/built-in.ipynb
+++ b/examples/built-in.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Built-in resources\n",
     "\n",
-    "`biubuild` has three built-in data resources: the _CHARMM_ force field, the _PDBE compound library_, and _PubChem_ (remotely queried)."
+    "BuildAMol has three built-in data resources: the _CHARMM_ force field, the _PDBE compound library_, and _PubChem_ (remotely queried)."
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "### CHARMM Force Field\n",
     "\n",
-    "In order to connect molecules together, the user may define their own `Linkage` by specifying which atoms to connect and which atoms to remove in the process. However, to make life easier, `biobuild` references the CHARMM force field which already specifies a number of linkage types - so-called `patches`. Each _patch_ specifies the atoms to connect and remove as well as the _internal coordinates_ around the newly formed bond. This allows biobuild to generate structures by pure matrix transformation as the resulting geometry is already specified. "
+    "In order to connect molecules together, the user may define their own `Linkage` by specifying which atoms to connect and which atoms to remove in the process. However, to make life easier, BuildAMol` references the CHARMM force field which already specifies a number of linkage types - so-called `patches`. Each _patch_ specifies the atoms to connect and remove as well as the _internal coordinates_ around the newly formed bond. This allows BuildAMol to generate structures by pure matrix transformation as the resulting geometry is already specified. "
    ]
   },
   {
@@ -2740,7 +2740,7 @@
     "\n",
     "The data from the CHARMM force field is handled by the `CHARMMTopology` class, which parses (you guessed it) a CHARMM topology file (**not** parameter file) and stores its data in a dictionary structure. Its purpose is to store linkages.\n",
     "\n",
-    "The default instance of this class can be accessed using the `get_default_topology` function. Why is this useful? Well, if there is a \"get\"-default topology function there may be a \"set\"-version as well (which is totally the case). If you have your own CHARMM topology file with defined linkages and molecules, you can `read_topology` to parse your own file, use `set_default=True` to make your topology the default, and thus tailor biobuild to your specific needs. "
+    "The default instance of this class can be accessed using the `get_default_topology` function. Why is this useful? Well, if there is a \"get\"-default topology function there may be a \"set\"-version as well (which is totally the case). If you have your own CHARMM topology file with defined linkages and molecules, you can `read_topology` to parse your own file, use `set_default=True` to make your topology the default, and thus tailor BuildAMol to your specific needs. "
    ]
   },
   {
@@ -5246,14 +5246,14 @@
    "source": [
     "### PDBE Compounds\n",
     "\n",
-    "biobuild maintains a part of the PDBE component library of small molecules, common sugar, lipid, nucleotides, and amino acid compounds and derivatives to directly obtain molecular structures while coding, without the need to download any pdb files externally. Molecules can be obtained from the library using their _PDB ID_, their names or some other available identifier such as SMILES. "
+    "BuildAMol maintains a part of the PDBE component library of small molecules, common sugar, lipid, nucleotides, and amino acid compounds and derivatives to directly obtain molecular structures while coding, without the need to download any pdb files externally. Molecules can be obtained from the library using their _PDB ID_, their names or some other available identifier such as SMILES. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To reduce memory load, biobuild loads by default an empty library which can then be populated according to the user's needs using functions:\n",
+    "To reduce memory load, BuildAMol loads by default an empty library which can then be populated according to the user's needs using functions:\n",
     "\n",
     "- `load_small_molecules()` \n",
     "- `load_sugars()`\n",
@@ -7743,11 +7743,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get a galactose (slowest)\n",
+    "# get a galactose (slowest, but most convenient)\n",
     "gal = bam.molecule(\"GAL\")\n",
     "# or (faster)\n",
     "gal = bam.get_compound(\"GAL\")\n",
-    "# or (fastest)\n",
+    "# or (fastest, but most tedious)\n",
     "gal = bam.Molecule.from_compound(\"GAL\", by=\"id\")"
    ]
   },
@@ -10261,7 +10261,7 @@
    "source": [
     "### Setting default compounds\n",
     "\n",
-    "If we have a custom set of compounds that we are always using, we can set them to be the defaults that are loaded by biobuild in every session. We can do so using the `set_default_compounds` function, just like with the CHARMM topology. Using the option `overwrite=True` we can ensure that biobuild will load the currently set default PDBE compounds library automatically in every future session."
+    "If we have a custom set of compounds that we are always using, we can set them to be the defaults that are loaded by BuildAMol in every session. We can do so using the `set_default_compounds` function, just like with the CHARMM topology. Using the option `overwrite=True` we can ensure that BuildAMol will load the currently set default PDBE compounds library automatically in every future session."
    ]
   },
   {
@@ -11995,7 +11995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And there it is! Again, using the `molecule` function would be all we need. The call to PubChem is automatically handled by biobuild if a reference to PDBECompounds does not yield any results."
+    "And there it is! Again, using the `molecule` function would be all we need. The call to PubChem is automatically handled by BuildAMol if a reference to PDBECompounds does not yield any results."
    ]
   }
  ],
