--- a/examples/default_settings.ipynb
+++ b/examples/default_settings.ipynb
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you checked out the tutorial on _built-in_ data resources you know that biobuild comes with a variety of molecular structures for the user to work with directly, such as compounds containing amino acids or sugars. These can be easily loaded using functions such as `load_sugars()`. However, what if we are working on a drug discovery project and would like to engineer small variations of a promising compound? We may have a structure of the compound itself but we don't want to keep re-loading them every time we open a new notebook to use buildamol. But we would like for it to be available by default. \n",
+    "If you checked out the tutorial on _built-in_ data resources you know that BuildAMol comes with a variety of molecular structures for the user to work with directly, such as compounds containing amino acids or sugars. These can be easily loaded using functions such as `load_sugars()`. However, what if we are working on a drug discovery project and would like to engineer small variations of a promising compound? We may have a structure of the compound itself but we don't want to keep re-loading them every time we open a new notebook to use buildamol. But we would like for it to be available by default. \n",
     "\n",
-    "Luckily, biobuild allows us to set our own _defaults_ that can be loaded in every future session. We can add _custom linkages_ and _custom structures_ to the default CHARMM topology and PDBE Compounds, respecitively using functions `add_linkage` and `add_compound`. Here's how:"
+    "Luckily, BuildAMol allows us to set our own _defaults_ that can be loaded in every future session. We can add _custom linkages_ and _custom structures_ to the default CHARMM topology and PDBE Compounds, respecitively using functions `add_linkage` and `add_compound`. Here's how:"
    ]
   },
   {
@@ -26,7 +26,7 @@
    "source": [
     "### Adding custom linkages\n",
     "\n",
-    "You may know that you can refer to any registered linkage directly via its string identifier. For example, we can refer to a beta 1->4 glycosydic linkage by its id `14bb`. We do not need to get the linkage object first because biobuild will be able to interpret the id and search the linkage object automatically. To make a custom linkage available in such a way, we simply need to define it, give it an id (which is otherwise optional when creating a `Linkage` object). Then we call `add_linkage` with our new linkage and that's it!"
+    "You may know that you can refer to any registered linkage directly via its string identifier. For example, we can refer to a beta 1->4 glycosydic linkage by its id `14bb`. We do not need to get the linkage object first because BuildAMol will be able to interpret the id and search the linkage object automatically. To make a custom linkage available in such a way, we simply need to define it, give it an id (which is otherwise optional when creating a `Linkage` object). Then we call `add_linkage` with our new linkage and that's it!"
    ]
   },
   {
@@ -2631,7 +2631,7 @@
    "source": [
     "### Adding custom structures\n",
     "\n",
-    "While it is true that biobuild does not load sugar-compounds and the like automatically, it does actually load a default PDBE compounds instance (it just happens to be empty be default). It can be populated with anything we want, however, using the `add_compound` function. The function expects a molecule, alongside with some additional metadata such as identifiers and name synonyms by which the molecule can be found. The logic is identical to `add_linkage` and we can make the additions permanent using the `overwrite=True` argument when calling `add_compound`. "
+    "While it is true that BuildAMol does not load sugar-compounds and the like automatically, it does actually load a default PDBE compounds instance (it just happens to be empty be default). It can be populated with anything we want, however, using the `add_compound` function. The function expects a molecule, alongside with some additional metadata such as identifiers and name synonyms by which the molecule can be found. The logic is identical to `add_linkage` and we can make the additions permanent using the `overwrite=True` argument when calling `add_compound`. "
    ]
   },
   {
@@ -2789,7 +2789,7 @@
    "source": [
     "### Handling updates\n",
     "\n",
-    "Setting defaults like this will overwrite some files in your local biobuild package directory. Since biobuild comes with these same files when you install it, every update would overwrite your custom defaults again. To make sure your custom settings are not simply lost, be sure to call `export_custom_resources` before updating. This will export your CHARMM Topology and PDBECompounds database to external files in some directory of your choice. After the update you can use `import_custom_resources` to point to these files and re-set your precious settings (again `import_custom_resources` can be used transiently or permanently, depending on whether or not we use `overwrite=True` or not).\n",
+    "Setting defaults like this will overwrite some files in your local BuildAMol package directory. Since BuildAMol comes with these same files when you install it, every update would overwrite your custom defaults again. To make sure your custom settings are not simply lost, be sure to call `export_custom_resources` before updating. This will export your CHARMM Topology and PDBECompounds database to external files in some directory of your choice. After the update you can use `import_custom_resources` to point to these files and re-set your precious settings (again `import_custom_resources` can be used transiently or permanently, depending on whether or not we use `overwrite=True` or not).\n",
     "\n",
     "> #### Note\n",
     "> These functions will use the currently loaded default compounds."
@@ -2813,9 +2813,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Restoring biobuild defaults\n",
+    "### Restoring BuildAMol defaults\n",
     "\n",
-    "Made a mistake and now your compounds are messed up? You can always call `restore_default_compounds` or `restore_default_topology` to get the previous settings back. This will restore your settings to biobuild factory defaults, i.e. an empty component library! Make sure to first export any compounds you would like to keep using `subset_compounds_by_types` or more thoroughly using `export_compounds` and later use the `PDBECompounds.merge` method to create a custom library to your liking. "
+    "Made a mistake and now your compounds are messed up? You can always call `restore_default_compounds` or `restore_default_topology` to get the previous settings back. This will restore your settings to BuildAMol factory defaults, i.e. an empty component library! Make sure to first export any compounds you would like to keep using `subset_compounds_by_types` or more thoroughly using `export_compounds` and later use the `PDBECompounds.merge` method to create a custom library to your liking. "
    ]
   }
  ],
