--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Getting Started\n",
     "\n",
-    "Welcome to the first `biobuild` tutorial, where we shall learn the basics of operating with `biobuild`!\n",
+    "Welcome to the first BuildAMol tutorial, where we shall learn the basics of operating with BuildAMol!\n",
     "\n",
     "> ### In this tutorial we will cover:\n",
     "> - which (main) classes and modules exist and when to use them\n",
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main Classes in `biobuild`\n",
+    "## Main Classes in BuildAMol\n",
     "\n",
     "The most important class is the `Molecule` class which houses ~90% of all functionality that the average user is likely to use. \n",
     "Next, comes the `Linkage` class that defines how multiple molecules can be connected, so the user can build larger structures. Third,\n",
@@ -106,7 +106,7 @@
    "source": [
     "### Resources\n",
     "\n",
-    "biobuild includes the _PDBE_ component library for small molecules (or at least a pretty large part of it). Since this is quite large, biobuild will not by default load any data, but offers a buch of functions for the user to load what they are interested in using selectively. We can also set defaults that are always loaded if we want to re-use our own custom builds in different sessions. \n",
+    "BuildAMol includes the _PDBE_ component library for small molecules (or at least a pretty large part of it). Since this is quite large, BuildAMol will not by default load any data, but offers a buch of functions for the user to load what they are interested in using selectively. We can also set defaults that are always loaded if we want to re-use our own custom builds in different sessions. \n",
     "\n",
     "Available pre-loadable sets are:\n",
     "\n",
@@ -132,7 +132,7 @@
    "source": [
     "### Molecules\n",
     "\n",
-    "Molecules are the essential data unit in `biobuild`. Each Molecule houses atoms that form a molecular structure. We can generate Molecules from:\n",
+    "Molecules are the essential data unit in BuildAMol. Each Molecule houses atoms that form a molecular structure. We can generate Molecules from:\n",
     "- a PDB or CIF file (e.g. \"my_structure.pdb\")\n",
     "- a PDB ID (e.g. \"GLC\" - the PDB id for alpha-D-glucose)\n",
     "- a trivial name (e.g. \"triacetamide\")\n",
@@ -1596,7 +1596,7 @@
    "metadata": {},
    "source": [
     "We can always check out if a compound is available in a loaded set using the `has_compound` function. But even if a specific compound is not available\n",
-    "biobuild can retrieve the molecular structure directly from PubChem to guarantee a smooth workflow!"
+    "BuildAMol can retrieve the molecular structure directly from PubChem to guarantee a smooth workflow!"
    ]
   },
   {
@@ -3061,7 +3061,7 @@
    "source": [
     "# get a diacetamide (using its name)\n",
     "# since diacetamide was not available in the loaded set of compounds\n",
-    "# biobuild will automatically download it from PubChem\n",
+    "# BuildAMol will automatically download it from PubChem\n",
     "tri = bam.molecule(\"diacetamide\")\n",
     "\n",
     "# check what it looks like\n",
@@ -3078,7 +3078,7 @@
     "Now assuming we want to take _diacetamide_ and connect the _serine_ to it. We can define a `Linkage` to specify which atoms to link between the two. To do so, we need to know what the atoms are labelled as (another reason to always visualize the structures). In the Linkage definition we specify, for instance, that the diacetamide-N1 should be connected to serine-C. In the process, we remove the diacetamide-H1 and the serine's OXT and HXT.\n",
     "\n",
     "> #### Note\n",
-    "> The linkages do *not* need to follow chemical reasoning - they only connect structures by adding and removing connections. Hence, we could connect the molecules by one of the methyl-groups making one of the hydrogens the leaving group (even though chemically such a reaction would probably never occur) - biobuild builds structures, but it does not imitate chemical reactions! "
+    "> The linkages do *not* need to follow chemical reasoning - they only connect structures by adding and removing connections. Hence, we could connect the molecules by one of the methyl-groups making one of the hydrogens the leaving group (even though chemically such a reaction would probably never occur) - BuildAMol builds structures, but it does not imitate chemical reactions! "
    ]
   },
   {
@@ -4906,7 +4906,7 @@
    "source": [
     "### Optimization \n",
     "\n",
-    "If we observe a clash in the resulting conformation, we can apply an optimization. This is where the `optimizers` module comes into play. Biobuild uses a rotational optimization system to find conformations without the need for molecular dynamics. This can be efficient or very expensive (up to unsolvable, in fact!) depending on the pre-processing / pre-thinking that the user provided. But don't worry, just don't try to optimize around 100 bonds at once (that won't work, trust me!).\n",
+    "If we observe a clash in the resulting conformation, we can apply an optimization. This is where the `optimizers` module comes into play. BuildAMol uses a rotational optimization system to find conformations without the need for molecular dynamics. This can be efficient or very expensive (up to unsolvable, in fact!) depending on the pre-processing / pre-thinking that the user provided. But don't worry, just don't try to optimize around 100 bonds at once (that won't work, trust me!).\n",
     "\n",
     "In general the workflow of optimization works like this:\n",
     "- decide on how \"detailed\" (=computationally expensive) your structure should be represented during optimization\n",
@@ -6716,7 +6716,7 @@
     }
    ],
    "source": [
-    "from biobuild import optimizers\n",
+    "from buildamol import optimizers\n",
     "\n",
     "# step (1)\n",
     "# make a graph representation of the molecule\n",
@@ -6753,7 +6753,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make working with different data formats as easy as possible, each biobuild Molecule can be created and saved to the following formats:\n",
+    "To make working with different data formats as easy as possible, each BuildAMol Molecule can be created and saved to the following formats:\n",
     "\n",
     "```mermaid\n",
     "flowchart TB\n",
@@ -6763,8 +6763,8 @@
     "  node_3([\"mmCIF\"])\n",
     "  node_9([\"Molfile\"])\n",
     "  node_11((\"SMILES\"))\n",
-    "  node_4([\"JSON\\n(biobuild)\"])\n",
-    "  node_5([\"pickle\\n(biobuild)\"])\n",
+    "  node_4([\"JSON\\n(BuildAMol)\"])\n",
+    "  node_5([\"pickle\\n(BuildAMol)\"])\n",
     "  node_6{{\"rdkit\\n(Chem.rdchem.Mol)\"}}\n",
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
     "  node_8{{\"biopython\\n(PDB.Structure)\"}}\n",
@@ -6812,7 +6812,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With that we have reached already the end of this first little introduction into what biobuild can do, and how it feels to work with buildamol. Thanks a lot for reading this far! And good luck with whatever you may do with biobuild in your projects!"
+    "With that we have reached already the end of this first little introduction into what BuildAMol can do, and how it feels to work with buildamol. Thanks a lot for reading this far! And good luck with whatever you may do with BuildAMol in your projects!"
    ]
   }
  ],
