--- a/examples/getting_started.ipynb
+++ b/examples/getting_started.ipynb
@@ -23,39 +23,9 @@
     "## Main Classes in BuildAMol\n",
     "\n",
     "The most important class is the `Molecule` class which houses ~90% of all functionality that the average user is likely to use. \n",
-    "Next, comes the `Linkage` class that defines how multiple molecules can be connected, so the user can build larger structures. Third,\n",
-    "are the `ResidueGraph` and `Rotatron` environments of the `optimizers` module - to optimize conformations. Finally, the  `MoleculeViewer3D` may come in quite handy. It is essentially just a plotly 3D-plot but it can be selectively colored easily so as to highlight specific parts of your molecule - it is a great tool to check if your building process is working (or to debug why it may not be). Finally, the `resources` module houses a wealth of reference structures for users to use when building their favourite structures.\n",
+    "Next, comes the `Linkage` class that defines how multiple molecules can be connected, so the user can build larger structures. Third are the ptimization environments of the `optimizers` module. They can be used to optimize conformations. Also, the  `MoleculeViewer3D` may come in quite handy. It is essentially just a plotly 3D-plot but it can be selectively colored easily so as to highlight specific parts of your molecule - it is a great tool to check if your building process is working (or to debug why it may not be). Finally, the `resources` module houses a wealth of reference structures for users to use when building their favourite structures.\n",
     "\n",
     "That's already about it! Of course, there is a lot more - but everything else is mostly underneath the surface and will most likely not bother the average user directly. "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```mermaid\n",
-    "\n",
-    "flowchart TB\n",
-    "  node_0[\"core\"]\n",
-    "  node_1(\"Molecule\")\n",
-    "  node_2(\"ResidueGraph\")\n",
-    "  node_3(\"MoleculeViewer3D\")\n",
-    "  node_4[\"Optimizers\"]\n",
-    "  node_6(\"Rotatron\")\n",
-    "  node_7{\"{}_optimize\"}\n",
-    "  node_5[\"Linkage\"]\n",
-    "  node_8[\"resources\"]\n",
-    "  node_1 -.-> node_2\n",
-    "  node_1 -.-> node_3\n",
-    "  node_0 --- node_1\n",
-    "  node_4 --- node_6\n",
-    "  node_4 --- node_7\n",
-    "  node_6 -.-> node_7\n",
-    "  node_2 -.-> node_7\n",
-    "  node_0 --- node_5\n",
-    "\n",
-    "```"
    ]
   },
   {
@@ -4906,28 +4876,14 @@
    "source": [
     "### Optimization \n",
     "\n",
-    "If we observe a clash in the resulting conformation, we can apply an optimization. This is where the `optimizers` module comes into play. BuildAMol uses a rotational optimization system to find conformations without the need for molecular dynamics. This can be efficient or very expensive (up to unsolvable, in fact!) depending on the pre-processing / pre-thinking that the user provided. But don't worry, just don't try to optimize around 100 bonds at once (that won't work, trust me!).\n",
+    "If we observe a clash in the resulting conformation, we can apply an optimization. This is where the `optimizers` module comes into play. BuildAMol uses a rotational optimization system to find conformations without the need for molecular dynamics. This can be efficient or very expensive (up to unsolvable, in fact!) depending on the pre-processing / pre-thinking that the user provided. But don't worry, just don't try to optimize hundreds of bonds at once (that won't work, trust me, I've tried!).\n",
     "\n",
-    "In general the workflow of optimization works like this:\n",
-    "- decide on how \"detailed\" (=computationally expensive) your structure should be represented during optimization\n",
-    "- decide on which bonds to rotate around\n",
-    "- choose an optimization algorithm\n",
-    "- run and check out the structure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For this example we will choose:\n",
-    "- full details (since it is a small structure)\n",
-    "- only bonds that are relatively \"central\" \n",
-    "- a genetic algorithm"
+    "The short way of optimizing a molecule is by using it's `optimize` method. This method does not require any additional arguments, although we can pass further instructions. If you are interested, go check out the tutorial on optimization to learn more!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -6716,27 +6672,9 @@
     }
    ],
    "source": [
-    "from buildamol import optimizers\n",
+    "# optimize the new molecule\n",
+    "new = new.optimize()\n",
     "\n",
-    "# step (1)\n",
-    "# make a graph representation of the molecule\n",
-    "graph = new.get_atom_graph() \n",
-    "\n",
-    "# step (2)\n",
-    "# get edges/bonds to rotate around\n",
-    "# we choose only edges/bonds that have at least 10 atoms before and after them\n",
-    "rotatable_edges = graph.find_rotatable_edges(min_descendants=10, min_ancestors=10)\n",
-    "\n",
-    "# step (3)\n",
-    "# make an environment\n",
-    "# we use the DistanceRotatron environment\n",
-    "env = optimizers.DistanceRotatron(graph, rotatable_edges)\n",
-    "\n",
-    "# step (4) and (5)\n",
-    "# run the optimization algorithm\n",
-    "new_optimized = optimizers.optimize(new, env, algorithm=\"genetic\")\n",
-    "\n",
-    "# and check what it looks like\n",
     "new.show()"
    ]
   },
