add stk to tutorial diagram

--- a/docs/examples/getting_started.ipynb
+++ b/docs/examples/getting_started.ipynb
@@ -6901,6 +6901,7 @@
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
     "  node_8{{\"biopython\\n(PDB.Structure)\"}}\n",
     "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
+    "  node_12{{\"stk\\n(stk.BuildingBlock)\"}}\n",
     "  node_2 <--> node_1\n",
     "  node_3 <--> node_1\n",
     "  node_9 <-.-> node_1\n",
@@ -6911,7 +6912,7 @@
     "  node_7 <--> node_1\n",
     "  node_8 <--> node_1\n",
     "  node_10 <--> node_1\n",
-    "  \n",
+    "  node_12 <--> node_1\n",
     "```\n",
     "\n",
     "Here are is a table with the corresponding methods available in the `Molecule` class:\n",
@@ -6927,6 +6928,7 @@
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
     "| openmm    | `from_openmm` | `to_openmm`    | \n",
+    "| stk       | `from_stk`    | `to_stk`       |\n",
     "| biopython | `<normal init>` | `to_biopython` |"
    ]
   },
