--- a/docs/examples/converting_formats.ipynb
+++ b/docs/examples/converting_formats.ipynb
@@ -35,6 +35,7 @@
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
     "  node_8{{\"biopython\\n(PDB.Structure)\"}}\n",
     "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
+    "  node_12{{\"stk\\n(stk.BuildingBlock)\"}}\n",
     "  node_2 <--> node_1\n",
     "  node_3 <--> node_1\n",
     "  node_9 <-.-> node_1\n",
@@ -45,6 +46,7 @@
     "  node_7 <--> node_1\n",
     "  node_8 <--> node_1\n",
     "  node_10 <--> node_1\n",
+    "  node_12 <--> node_1\n",
     "  \n",
     "```\n",
     "\n",
@@ -60,7 +62,8 @@
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
-    "| openmm    | `from_openmm` | `to_openmm`    | \n",
+    "| openmm    | `from_openmm` | `to_openmm`    |\n",
+    "| stk       | `from_stk`    | `to_stk`       |\n",
     "| biopython | `<normal init>` | `to_biopython` |"
    ]
   },
