update tutorial text

--- a/docs/examples/converting_formats.ipynb
+++ b/docs/examples/converting_formats.ipynb
@@ -72,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In fact, using the toplevel `molecule` function will automatically try to discern which input type is given and perform the necessary file-reading, parsing, and/or format conversions. For some of the methods there are also functional equivalents available such as the `read_pdb` and `write_pdb` functions as equivalents to the `from_pbd` and `to_pdb` methods."
+    "In fact, using the toplevel `molecule` function will automatically try to discern which input type is given and perform the necessary file-reading, parsing, and/or format conversions. For some of the methods there are also functional equivalents available such as the `read_pdb` and `write_pdb` functions as equivalents to the `from_pdb` and `to_pdb` methods."
    ]
   },
   {
