--- a/examples/converting_formats.ipynb
+++ b/examples/converting_formats.ipynb
@@ -35,6 +35,7 @@
     "  node_7{{\"openbabel\\n(pybel.Molecule)\"}}\n",
     "  node_8{{\"biopython\\n(PDB.Structure)\"}}\n",
     "  node_10{{\"openmm\\n(openmm.PDBFile)\"}}\n",
+    "  node_12{{\"stk\\n(stk.BuildingBlock)\"}}\n",
     "  node_2 <--> node_1\n",
     "  node_3 <--> node_1\n",
     "  node_9 <-.-> node_1\n",
@@ -45,6 +46,7 @@
     "  node_7 <--> node_1\n",
     "  node_8 <--> node_1\n",
     "  node_10 <--> node_1\n",
+    "  node_12 <--> node_1\n",
     "  \n",
     "```\n",
     "\n",
@@ -60,7 +62,8 @@
     "| pickle    | `load`        | `save`         |\n",
     "| rdkit     | `from_rdkit`  | `to_rdkit`     |\n",
     "| openbabel | `from_pybel`  | `to_pybel`     |\n",
-    "| openmm    | `from_openmm` | `to_openmm`    | \n",
+    "| openmm    | `from_openmm` | `to_openmm`    |\n",
+    "| stk       | `from_stk`    | `to_stk`       |\n",
     "| biopython | `<normal init>` | `to_biopython` |"
    ]
   },
@@ -69,7 +72,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In fact, using the toplevel `molecule` function will automatically try to discern which input type is given and perform the necessary file-reading, parsing, and/or format conversions. For some of the methods there are also functional equivalents available such as the `read_pdb` and `write_pdb` functions as equivalents to the `from_pbd` and `to_pdb` methods."
+    "In fact, using the toplevel `molecule` function will automatically try to discern which input type is given and perform the necessary file-reading, parsing, and/or format conversions. For some of the methods there are also functional equivalents available such as the `read_pdb` and `write_pdb` functions as equivalents to the `from_pdb` and `to_pdb` methods."
    ]
   },
   {
