change tutorial heading

--- a/docs/examples/rotaxane_hard.ipynb
+++ b/docs/examples/rotaxane_hard.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assembling multiple Molecules\n",
+    "# Making a Rotaxane (hard)\n",
     "\n",
     "> ### In this tutorial we will cover:\n",
     "> - how we can use BuildAMol when we want to setup an entire multi-molecule system\n",
